2008-09-10  Sam Weinig  <sam@webkit.org>

        Rubber-stamped by David Hyatt.

        Add additional test by Feng Qian.

        * fast/dom/StyleSheet/ownerNode-lifetime-2-expected.txt: Added.
        * fast/dom/StyleSheet/ownerNode-lifetime-2.html: Added.

2008-09-10  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=20741
        REGRESSION: ISO-8859-8-I encoding is registered incorrectly

        * fast/encoding/hebrew: Added.
        * fast/encoding/hebrew/8859-8-e-expected.txt: Added.
        * fast/encoding/hebrew/8859-8-e.html: Added.
        * fast/encoding/hebrew/8859-8-expected.txt: Added.
        * fast/encoding/hebrew/8859-8-i-expected.txt: Added.
        * fast/encoding/hebrew/8859-8-i.html: Added.
        * fast/encoding/hebrew/8859-8.html: Added.
        * fast/encoding/hebrew/csISO88598I-expected.txt: Added.
        * fast/encoding/hebrew/csISO88598I.html: Added.
        * fast/encoding/hebrew/hebrew-expected.txt: Added.
        * fast/encoding/hebrew/hebrew.html: Added.
        * fast/encoding/hebrew/iso-ir-138-expected.txt: Added.
        * fast/encoding/hebrew/iso-ir-138.html: Added.
        * fast/encoding/hebrew/logical-expected.txt: Added.
        * fast/encoding/hebrew/logical.html: Added.

2008-09-05  Chris Marrin  <cmarrin@apple.com>

        Reviewed by Sam Weinig.

        Need to handle the case when 0% or 100% keyframe is omitted
        https://bugs.webkit.org/show_bug.cgi?id=20679

        * animations/keyframes-from-missing-expected.txt: Added.
        * animations/keyframes-from-missing.html: Added.
        * animations/keyframes-to-missing-expected.txt: Added.
        * animations/keyframes-to-missing.html: Added.

2008-09-09  Dean Jackson  <dino@apple.com>

        Reviewed by Sam Weinig.

        Test Document::createEvent for Animation and Transition events
        https://bugs.webkit.org/show_bug.cgi?id=20734
